--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 
-	<!-- HEADER -->
+	<!-- HEADER     -->
 
 	<header class="main-header">
-		<div class="header-container">
+		<div class="logo-container">
 			<a class="logo" href="#">
 				<img src="http://placehold.it/150x100" alt="nёrds" height="65" width="160">
 			</a>
+		</div>
+		<div class="nav-bar-container">
 			<nav class="nav-bar">	
 				<ul>
 					<li>
@@ -34,46 +36,51 @@
 		</div>	
 	</header>
 
-	<!-- CONTENT -->
+	<!-- CONTENT  -->
 
 	<main>
-		<div class="main-container">
-			<div class="slider">
-				<div class="slider-item-1">
-					<div class="slider-img-1 active">
+
+		<!-- SLIDER -->
+		<div class="slider">
+			<div class="slider-container">
+				<div class="slider-item-phones">
+					<div class="slider-img-phones active">
 						<img src="http://placehold.it/150x100" alt="slide1" height="430" width="760">
 					</div>
 					<div class="slider-caption">
 						<b class="slider-header">Долго, дорого, скурпулезно</b>
 						<p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
 					</div>
-					<a class="slider-button btn" href="#">Узнать больше</a>
+					<a class="btn" href="#">Узнать больше</a>
 				</div>
-				<div class="slider-item-2">
-					<div class="slider-img-2">
+				<div class="slider-item-screens">
+					<div class="slider-img-screens">
 						<img src="http://placehold.it/150x100" alt="slide2" height="430" width="760">
 					</div>
 					<div class="slider-caption">
 						<b class="slider-header">Любим математику как никто другой</b>
 						<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
 					</div>
-					<a class="slider-button btn" href="#">Узнать больше</a>
+					<a class="btn" href="#">Узнать больше</a>
 				</div>
-				<div class="slider-item-3">
-					<div class="slider-img-3">
+				<div class="slider-item-tablet">
+					<div class="slider-img-tablet">
 						<img src="http://placehold.it/150x100" alt="slide3.jpeg" height="430" width="760">
 					</div>
 					<div class="slider-caption">
 						<b class="slider-header">Только ночь, только хардкор</b>
 						<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
 					</div>
-					<a class="slider-button btn" href="#">узнать больше</a>
+					<a class="btn" href="#">Узнать больше</a>
 				</div>
 			</div>
-			<!-- end slider -->
+		</div>
+		<!-- end slider -->
 
 
-			<div class="features">
+		<!-- FEATURES -->
+		<div class="features">
+			<div class="features-container">
 				<div class="features-sites">
 					<figure class="features-img">
 						<img src="http://placehold.it/150x100" alt="web-sites" height="146" width="300">
@@ -108,14 +115,17 @@
 				</div>
 				<hr>
 			</div>
-			<!-- end features -->
+		</div>
+		<!-- end features -->
 
 
-			<div class="about">
+		<!-- ABOUT -->
+		<div class="about">
+			<div class="about-container">
 				<div class="about-left">
 					<h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
 					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет преввыше креатива. Работаем непокладая рук, как роботы.</p>
-					<h3>Выполняем заказы на разработку:</h3>
+					<h4>Выполняем заказы на разработку:</h4>
 					<ul>
 						<li>Веб-сайтов любой сложности</li>
 						<li>Мобильных приложений для iOS и Andriod</li>
@@ -124,7 +134,7 @@
 				</div>
 				<div class="about-right">
 					<img src="http://placehold.it/150x100" alt="nёrds" height="210" width="360">
-					<h3>С 2004 года любим точность во всем:</h3>
+					<h4>С 2004 года любим точность во всем:</h4>
 					<ul>
 						<li><span>146%</span> Уровень самоотдачи</li>
 						<li><span>100%</span> Соблюдение сроков</li>
@@ -132,70 +142,92 @@
 					</ul>
 				</div>
 			</div>
-			<!-- end about -->
-
-			
-			<div class="recent-works">
-					<a class="html-academy" href="#"><img src="http://placehold.it/150x100" alt="html-academy" height="180" width="260"></a>
-					<a class="borodinski" href="#"><img src="http://placehold.it/150x100" alt="borodinski" height="180" width="260"></a>
-					<a class="pink" href="#"><img src="http://placehold.it/150x100" alt="pink" height="180" width="260"></a>
-					<a class="mishka" href="#"><img src="http://placehold.it/150x100" alt="mishka" height="180" width="260"></a>
-			</div>
-			<!-- end recent-works -->
 		</div>
+		<!-- end about -->
+
+		<!-- RECENT-WORKS -->
+		<div class="recent-works">
+			<div class="recent-works-container">
+				<a class="html-academy" href="#">
+					<img src="http://placehold.it/150x100" alt="html-academy" height="180" width="260">
+				</a>
+				<a class="borodinski" href="#">
+					<img src="http://placehold.it/150x100" alt="borodinski" height="180" width="260">
+				</a>
+				<a class="pink" href="#">
+					<img src="http://placehold.it/150x100" alt="pink" height="180" width="260">
+				</a>
+				<a class="mishka" href="#">
+					<img src="http://placehold.it/150x100" alt="mishka" height="180" width="260">
+				</a>
+			</div>
+		</div>
+		<!-- end recent-works -->
 	</main>
 
 	<!-- FOOTER -->
 
 	<footer class="main-footer">
-		<div class="footer-container">
+
+		<!-- MAP -->
+		<div class="map-container">
 			<div id="map" class="map"></div>
-    
+
+
+    		<!-- CONTACTS -->
 			<div class="contacts">
-				<p><span>nёrds design studio</span><br>
-				191186, Санкт-Петербург,<br>
-				ул. Б. Конюшенная, д.19/8 тел.<br> 
-				+7(812)275-75-75</p>
-				<a  class="btn" href="">Напишите нам</a>
+				<div class="contacts-container">
+					<h3>nёrds design studio</h3>
+					<p>191186, Санкт-Петербург,<br>
+					ул. Б. Конюшенная, д.19/8 тел.<br> 
+					+7(812)275-75-75</p>
+					<a  class="btn" href="">Напишите нам</a>
+				</div>
+				<!-- end contacts -->
 
 
 				<!-- MODAL WINDOW -->
 				<div class="modal-window">
-					<form action="#" method="post">
-						<fieldset>
-							<legend>Напишите нам</legend>
-							<label>
-								Ваше имя:
-								<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
-							</label>
-							<label>
-								Ваш e-mail:
-								<input type="email" name="e-mail" placeholder="Для отправки ответа">
-							</label>
-							<label>
-								Текст письма:
-								<textarea rows="4" name="message" placeholder="В свободной форме"></textarea>
-							</label>
-							<button class="btn">Отправить</button>
-						</fieldset>
-					</form>
+					<div class="modal-window-container">
+						<form action="#" method="post">
+							<fieldset>
+								<legend>Напишите нам</legend>
+								<label>
+									Ваше имя:
+									<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
+								</label>
+								<label>
+									Ваш e-mail:
+									<input type="email" name="e-mail" placeholder="Для отправки ответа">
+								</label>
+								<label>
+									Текст письма:
+									<textarea rows="4" name="message" placeholder="В свободной форме"></textarea>
+								</label>
+								<button class="btn">Отправить</button>
+							</fieldset>
+						</form>
+					</div>
 				</div>
-				<!-- end modal window -->
-
 			</div>
+				<!-- end modal window -->
 		</div>
 		<!-- end map -->
 
-
+		<!-- SOCIAL -->
 		<div class="social">
-			<div class="social-icons">
-				<a href="#">Вконтакте</a>
-				<a href="#">Facebook</a>
-				<a href="#">Instagram</a>
-			</div>
-			<div class="social-text">
-				<p><span>Давайте дружить, это выгодно!</span>
-				Скидка 10% для друзей из социальных сетей.</p>
+			<div class="social-container">
+				<div class="social-icons">
+					<a href="#">Вконтакте</a>
+					<a href="#">Facebook</a>
+					<a href="#">Instagram</a>
+				</div>
+				<div class="social-text">
+					<div class="social-text-container">
+						<p><span>Давайте дружить, это выгодно!</span>
+						Скидка 10% для друзей из социальных сетей.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<!-- end social -->
