--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- HEADER -->
 
 	<header class="main-header">
-		<div class="header-container">
+		<div class="container">
 			<a class="logo" href="#">
 				<img src="http://placehold.it/150x100" alt="nёrds" height="65" width="160">
 			</a>
@@ -40,7 +40,7 @@
 
 		<!-- SLIDER -->
 		<div class="slider">
-			<div class="slider-container">
+			<div class="container">
 				<div class="slider-item active">
 					<div class="slider-img">
 						<img src="http://placehold.it/150x100" alt="slide1" height="430" width="760">
@@ -78,7 +78,7 @@
 
 		<!-- FEATURES -->
 		<div class="features">
-			<div class="features-container">
+			<div class="container">
 				<div class="features-item">
 					<figure class="features-img">
 						<img src="http://placehold.it/150x100" alt="web-sites" height="146" width="300">
@@ -118,7 +118,7 @@
 
 		<!-- ABOUT -->
 		<div class="about">
-			<div class="about-container">
+			<div class="container">
 				<div class="about-left">
 					<h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
 					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет преввыше креатива. Работаем непокладая рук, как роботы.</p>
@@ -144,7 +144,7 @@
 
 		<!-- RECENT-WORKS -->
 		<div class="recent-works">
-			<div class="recent-works-container">
+			<div class="container">
 				<a class="recent-logo" href="#">
 					<img src="http://placehold.it/150x100" alt="html-academy" height="180" width="260">
 				</a>
@@ -160,17 +160,19 @@
 			</div>
 		</div>
 		<!-- end recent-works -->
+
+		<!-- MAP -->
+		<div id="map" class="map"></div>
+		
 	</main>
+
+
 
 	<!-- FOOTER -->
 
 	<footer class="main-footer">
-		<div class="footer-container">
+		<div class="container">
 		
-			<!-- MAP -->
-			<div id="map" class="map"></div>
-
-
     		<!-- CONTACTS -->
 			<div class="contacts">
 				<h3>nёrds design studio</h3>
@@ -184,7 +186,7 @@
 
 			<!-- MODAL WINDOW -->
 			<div class="modal-window">
-				<div class="modal-window-container">
+				<div class="container">
 					<form action="#" method="post">
 						<fieldset>
 							<legend>Напишите нам</legend>
@@ -209,7 +211,7 @@
 		
 			<!-- SOCIAL -->
 			<div class="social">
-				<div class="social-container">
+				<div class="container">
 					<div class="social-icons">
 						<a href="#">Вконтакте</a>
 						<a href="#">Facebook</a>
