--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -10,7 +10,7 @@
 	<!-- HEADER -->
 
 	<header class="main-header">
-		<div class="header-container">
+		<div class="container">
 			<a class="logo" href="#">
 				<img src="http://placehold.it/150x100" alt="nёrds" height="65" width="160">
 			</a>
@@ -44,7 +44,7 @@
 
 		<!-- LEFT SECTION -->
 		<div class="left-section">
-			<div class="left-container">
+			<div class="container">
 				<form action="#" method="get" oninput="priceoutput.value=price.value">
 					<!-- ползунок -->
 					<!-- <div class="price">
@@ -98,7 +98,7 @@
 
 		<!-- RIGHT SECTION -->
 		<div class="right-section">
-			<div class="right-container">
+			<div class="container">
 				<div class="sorting">
 					<b class="form-caption">Cортировать</b>
 					<ul>
@@ -166,7 +166,7 @@
 
 		<!-- PAGINATOR -->
 		<div class="paginator">
-			<div class="paginator-container">
+			<div class="container">
 				<ul>
 					<li><span>1</span></li>
 					<li><a href="#">2</a></li>
@@ -176,16 +176,17 @@
 			</div>
 		</div>
 		<!-- end paginator -->
+
+		<!-- MAP -->
+		<div id="map" class="map"></div>
+		
 	</main>
+
 
 	<!-- FOOTER -->
 
 	<footer class="main-footer">
-		<div class="footer-container">
-		
-			<!-- MAP -->
-			<div id="map" class="map"></div>
-
+		<div class="container">
 
     		<!-- CONTACTS -->
 			<div class="contacts">
@@ -200,7 +201,7 @@
 
 			<!-- MODAL WINDOW -->
 			<div class="modal-window">
-				<div class="modal-window-container">
+				<div class="container">
 					<form action="#" method="post">
 						<fieldset>
 							<legend>Напишите нам</legend>
@@ -225,7 +226,7 @@
 		
 			<!-- SOCIAL -->
 			<div class="social">
-				<div class="social-container">
+				<div class="container">
 					<div class="social-icons">
 						<a href="#">Вконтакте</a>
 						<a href="#">Facebook</a>
