--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Нёрдс</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-index.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 	<header class="main-header">
 		<div class="container">
 			<a class="logo" href="#">
-				<img src="http://placehold.it/150x100" alt="nёrds" height="65" width="160">
+				<img src="img/nerds-index/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
 			<nav class="nav-bar">	
 				<ul>
@@ -29,8 +29,8 @@
 						<a class="nav-item" href="#">Контакты</a>
 					</li>
 				</ul>
-				<a class="nav-item cart" href="#">Корзина</a>
 			</nav>
+			<a class="cart" href="#">Корзина</a>
 		</div>	
 	</header>
 
@@ -38,131 +38,144 @@
 
 	<main>
 
-		<!-- SLIDER -->
-		<div class="slider">
+		<div class="content">
 			<div class="container">
-				<div class="slider-item active">
-					<div class="slider-img">
-						<img src="http://placehold.it/150x100" alt="slide1" height="430" width="760">
+
+				<!-- SLIDER -->
+				<div class="slider">
+					<div class="slider-item active">
+						<div class="slider-img">
+							<img src="img/nerds-index/slider-1.jpg" alt="slide1" height="430" width="760">
+						</div>
+						<div class="slider-caption">
+							<b class="slider-header">Долго, дорого, скурпулезно</b>
+							<p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+						</div>
+						<a class="btn" href="#">Узнать больше</a>
 					</div>
-					<div class="slider-caption">
-						<b class="slider-header">Долго, дорого, скурпулезно</b>
-						<p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+					<div class="slider-item">
+						<div class="slider-img">
+							<img src="img/nerds-index/slider-2.jpg" alt="slide2" height="430" width="760">
+						</div>
+						<div class="slider-caption">
+							<b class="slider-header">Любим математику как никто другой</b>
+							<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+						</div>
+						<a class="btn" href="#">Узнать больше</a>
 					</div>
-					<a class="btn" href="#">Узнать больше</a>
+					<div class="slider-item">
+						<div class="slider-img">
+							<img src="img/nerds-index/slider-3.jpg" alt="slide3.jpeg" height="430" width="760">
+						</div>
+						<div class="slider-caption">
+							<b class="slider-header">Только ночь, только хардкор</b>
+							<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+						</div>
+						<a class="btn" href="#">Узнать больше</a>
+					</div>
 				</div>
-				<div class="slider-item">
-					<div class="slider-img">
-						<img src="http://placehold.it/150x100" alt="slide2" height="430" width="760">
+				<!-- end slider -->
+
+
+				<!-- FEATURES -->
+				<div class="features">
+					<div class="features-item">
+						<figure class="features-img">
+							<img src="img/nerds-index/illustration-1.jpg" alt="web-sites" height="146" width="300">
+						</figure>
+						<div class="features-text">
+							<h2>Веб-сайты</h2>
+							<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+						</div>
+						<a class="btn" href="#">Заказать</a>
 					</div>
-					<div class="slider-caption">
-						<b class="slider-header">Любим математику как никто другой</b>
-						<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+					
+					<div class="features-item">
+						<figure class="features-img">
+							<img src="img/nerds-index/illustration-2.jpg" alt="applications" height="146" width="300">
+						</figure>
+						<div class="features-text">
+							<h2>Приложения </h2>
+							<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+						</div>
+						<a class="btn" href="#">Заказать</a>
 					</div>
-					<a class="btn" href="#">Узнать больше</a>
+
+					<div class="features-item">
+						<figure class="features-img">
+							<img src="img/nerds-index/illustration-3.jpg" alt="presentations" height="146" width="300">
+						</figure>
+						<div class="features-text">
+							<h2>Презентации</h2>
+							<p>Вы даже не подозреваете насколько вы изумительны</p>
+						</div>
+						<a class="btn" href="#">Заказать</a>
+					</div>
 				</div>
-				<div class="slider-item">
-					<div class="slider-img">
-						<img src="http://placehold.it/150x100" alt="slide3.jpeg" height="430" width="760">
+				<!-- end features -->
+
+
+				<!-- ABOUT -->
+				<div class="about">
+					<div class="about-left">
+						<h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
+						<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет преввыше креатива. Работаем непокладая рук, как роботы.</p>
+						<h4>Выполняем заказы на разработку:</h4>
+						<ul>
+							<li>Веб-сайтов любой сложности</li>
+							<li>Мобильных приложений для iOS и Andriod</li>
+							<li>Слайдшоу и видео для корпоративных презентаций</li>
+						</ul>
 					</div>
-					<div class="slider-caption">
-						<b class="slider-header">Только ночь, только хардкор</b>
-						<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+					<div class="about-right">
+						<img src="img/nerds-index/nerds-illustration.jpg" alt="nёrds" height="210" width="360">
+						<h4>С 2004 года любим точность во всем:</h4>
+						<ul>
+							<li><span>146%</span> Уровень самоотдачи</li>
+							<li><span>100%</span> Соблюдение сроков</li>
+							<li><span>50%</span> Минимальная предоплата</li>
+						</ul>
 					</div>
-					<a class="btn" href="#">Узнать больше</a>
 				</div>
+				<!-- end about -->
+
+				<!-- RECENT-WORKS -->
+				<div class="recent-works">
+					<a class="recent-logo" href="#">
+						<img src="img/nerds-index/logo-1.png" alt="html-academy" height="68" width="199">
+					</a>
+					<a class="recent-logo" href="#">
+						<img src="img/nerds-index/logo-2.png" alt="borodinski" height="90" width="210">
+					</a>
+					<a class="recent-logo" href="#">
+						<img src="img/nerds-index/logo-3.png" alt="pink" height="52" width="185">
+					</a>
+					<a class="recent-logo" href="#">
+						<img src="img/nerds-index/logo-4.png" alt="mishka" height="84" width="173">
+					</a>
+				</div>
+				<!-- end recent-works -->
+
 			</div>
 		</div>
-		<!-- end slider -->
-
-
-		<!-- FEATURES -->
-		<div class="features">
-			<div class="container">
-				<div class="features-item">
-					<figure class="features-img">
-						<img src="http://placehold.it/150x100" alt="web-sites" height="146" width="300">
-					</figure>
-					<div class="features-text">
-						<h2>Веб-сайты</h2>
-						<p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-					</div>
-					<a class="btn" href="#">Заказать</a>
-				</div>
-				
-				<div class="features-item">
-					<figure class="features-img">
-						<img src="http://placehold.it/150x100" alt="applications" height="146" width="300">
-					</figure>
-					<div class="features-text">
-						<h2>Приложения </h2>
-						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
-					</div>
-					<a class="btn" href="#">Заказать</a>
-				</div>
-
-				<div class="features-item">
-					<figure class="features-img">
-						<img src="http://placehold.it/150x100" alt="presentations" height="146" width="300">
-					</figure>
-					<div class="features-text">
-						<h2>Презентации</h2>
-						<p>Вы даже не подозреваете насколько вы изумительны</p>
-					</div>
-					<a class="btn" href="#">Заказать</a>
-				</div>
-			</div>
-		</div>
-		<!-- end features -->
-
-
-		<!-- ABOUT -->
-		<div class="about">
-			<div class="container">
-				<div class="about-left">
-					<h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
-					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет преввыше креатива. Работаем непокладая рук, как роботы.</p>
-					<h4>Выполняем заказы на разработку:</h4>
-					<ul>
-						<li>Веб-сайтов любой сложности</li>
-						<li>Мобильных приложений для iOS и Andriod</li>
-						<li>Слайдшоу и видео для корпоративных презентаций</li>
-					</ul>
-				</div>
-				<div class="about-right">
-					<img src="http://placehold.it/150x100" alt="nёrds" height="210" width="360">
-					<h4>С 2004 года любим точность во всем:</h4>
-					<ul>
-						<li><span>146%</span> Уровень самоотдачи</li>
-						<li><span>100%</span> Соблюдение сроков</li>
-						<li><span>50%</span> Минимальная предоплата</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<!-- end about -->
-
-		<!-- RECENT-WORKS -->
-		<div class="recent-works">
-			<div class="container">
-				<a class="recent-logo" href="#">
-					<img src="http://placehold.it/150x100" alt="html-academy" height="180" width="260">
-				</a>
-				<a class="recent-logo" href="#">
-					<img src="http://placehold.it/150x100" alt="borodinski" height="180" width="260">
-				</a>
-				<a class="recent-logo" href="#">
-					<img src="http://placehold.it/150x100" alt="pink" height="180" width="260">
-				</a>
-				<a class="recent-logo" href="#">
-					<img src="http://placehold.it/150x100" alt="mishka" height="180" width="260">
-				</a>
-			</div>
-		</div>
-		<!-- end recent-works -->
+		<!-- end content -->
 
 		<!-- MAP -->
-		<div id="map" class="map"></div>
+		<div id="map" class="map">
+			<div class="container">
+
+				<!-- CONTACTS -->
+				<div class="contacts">
+					<h3>nёrds design studio</h3>
+					<p>191186, Санкт-Петербург,<br>
+					ул. Б. Конюшенная, д.19/8 тел.<br> 
+					+7(812)275-75-75</p>
+					<a  class="btn" href="">Напишите нам</a>
+				</div>
+				<!-- end contacts -->
+
+			</div>
+		</div>
 		
 	</main>
 
@@ -172,55 +185,40 @@
 
 	<footer class="main-footer">
 		<div class="container">
-		
-    		<!-- CONTACTS -->
-			<div class="contacts">
-				<h3>nёrds design studio</h3>
-				<p>191186, Санкт-Петербург,<br>
-				ул. Б. Конюшенная, д.19/8 тел.<br> 
-				+7(812)275-75-75</p>
-				<a  class="btn" href="">Напишите нам</a>
-			</div>
-			<!-- end contacts -->
-
 
 			<!-- MODAL WINDOW -->
 			<div class="modal-window">
-				<div class="container">
-					<form action="#" method="post">
-						<fieldset>
-							<legend>Напишите нам</legend>
-							<label>
-								Ваше имя:
-								<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
-							</label>
-							<label>
-								Ваш e-mail:
-								<input type="email" name="e-mail" placeholder="Для отправки ответа">
-							</label>
-							<label>
-								Текст письма:
-								<textarea rows="4" name="message" placeholder="В свободной форме"></textarea>
-							</label>
-							<button class="btn">Отправить</button>
-						</fieldset>
-					</form>
-				</div>
+				<form action="#" method="post">
+					<fieldset>
+						<legend>Напишите нам</legend>
+						<label>
+							Ваше имя:
+							<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
+						</label>
+						<label>
+							Ваш e-mail:
+							<input type="email" name="e-mail" placeholder="Для отправки ответа">
+						</label>
+						<label>
+							Текст письма:
+							<textarea rows="4" name="message" placeholder="В свободной форме"></textarea>
+						</label>
+						<button class="btn">Отправить</button>
+					</fieldset>
+				</form>
 			</div>
 			<!-- end modal window -->
 		
 			<!-- SOCIAL -->
 			<div class="social">
-				<div class="container">
-					<div class="social-icons">
-						<a href="#">Вконтакте</a>
-						<a href="#">Facebook</a>
-						<a href="#">Instagram</a>
-					</div>
-					<div class="social-text">
-						<b>Давайте дружить, это выгодно!</b>
-						<p>Скидка 10% для друзей из социальных сетей.</p>
-					</div>
+				<div class="social-icons">
+					<a href="#">Вконтакте</a>
+					<a href="#">Facebook</a>
+					<a href="#">Instagram</a>
+				</div>
+				<div class="social-text">
+					<b>Давайте дружить, это выгодно!</b>
+					<p>Скидка 10% для друзей из социальных сетей.</p>
 				</div>
 			</div>
 			<!-- end social -->
