--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Магазин готовых шаблонов</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-catalog.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 	<header class="main-header">
 		<div class="container">
 			<a class="logo" href="#">
-				<img src="http://placehold.it/150x100" alt="nёrds" height="65" width="160">
+				<img src="img/nerds-catalog/nerds-logo.png" alt="nёrds" height="65" width="160">
 			</a>
 			<nav class="nav-bar">	
 				<ul>
@@ -29,157 +29,183 @@
 						<a class="nav-item" href="#">Контакты</a>
 					</li>
 				</ul>
-				<a class="nav-item cart" href="#">Корзина</a>
 			</nav>
+			<a class="cart" href="#">Корзина</a>
 		</div>	
 	</header>
 
 	<!-- CONTENT -->
 
 	<main>
-		<div class="catalog-item">
-			<h1>Магазин готовых шаблонов</h1>
-		</div>
-
-
-		<!-- LEFT SECTION -->
-		<div class="left-section">
+		<div class="content">
 			<div class="container">
-				<form action="#" method="get" oninput="priceoutput.value=price.value">
-					<!-- ползунок -->
-					<!-- <div class="price">
-						<b class="form-caption">стоимость</b>
-						<input id="price" name="price" type="range" min="0" max="25000" step="100"><br>
-						<output name="priceoutput">до</output>
-					</div> -->
-					<fieldset class="grid">
-						<legend class="form-caption">Сетка</legend>
-						<label>
-							<input type="radio" value="adaptive" name="grid" checked>
-							Адаптивная
-						</label>
-						<label>
-							<input type="radio" value="fixed" name="grid">
-							Фиксированная
-						</label>
-						<label>
-							<input type="radio" value="fluid" name="grid">
-							Резиновая
-						</label>
-					</fieldset>
-					<fieldset class="features">
-						<legend class="form-caption">Особенности</legend>
-						<label>
-							<input type="checkbox" name="slider" checked>
-							Слайдер
-						</label>
-						<label>
-							<input type="checkbox" name="advantage-block">
-							Блок преимуществ
-						</label>
-						<label>
-							<input type="checkbox" name="news" checked>
-							Новости
-						</label>
-						<label>
-							<input type="checkbox" name="gallery">
-							Галерея
-						</label>
-						<label>
-							<input type="checkbox" name="cart">
-							Корзина
-						</label>
-					</fieldset>
-					<a class="button" href="form.html">Показать</a>
-				</form>
-			</div>
-		</div>
-		<!-- end left section -->
+				<div class="catalog-item">
+					<h1>Магазин готовых шаблонов</h1>
+				</div>
 
-		<!-- RIGHT SECTION -->
-		<div class="right-section">
-			<div class="container">
-				<div class="sorting">
-					<b class="form-caption">Cортировать</b>
+
+				<!-- LEFT SECTION -->
+				<div class="left-section">
+					<form action="#" method="get">
+						<div class="range-filter">
+							<div class="range-controls">
+								<div class="scale">
+									<div class="bar" style="margin-left: 20%; width: 30%">
+									</div>
+									<div class="toggle toggle-min"></div>
+									<div class="toggle toggle-max"></div>
+								</div>
+								<div class="price-controls">
+									<label class="min-price">от <input name="min-price" type="text" value="0"></label>
+									<label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+								</div>
+							</div>
+						</div>
+
+						<fieldset class="grid">
+							<legend class="form-caption">Сетка</legend>
+							<label>
+								<input type="radio" value="adaptive" name="grid" checked>
+								Адаптивная
+							</label>
+							<label>
+								<input type="radio" value="fixed" name="grid">
+								Фиксированная
+							</label>
+							<label>
+								<input type="radio" value="fluid" name="grid">
+								Резиновая
+							</label>
+						</fieldset>
+						<fieldset class="features">
+							<legend class="form-caption">Особенности</legend>
+							<label>
+								<input type="checkbox" name="slider" checked>
+								Слайдер
+							</label>
+							<label>
+								<input type="checkbox" name="advantage-block">
+								Блок преимуществ
+							</label>
+							<label>
+								<input type="checkbox" name="news" checked>
+								Новости
+							</label>
+							<label>
+								<input type="checkbox" name="gallery">
+								Галерея
+							</label>
+							<label>
+								<input type="checkbox" name="cart">
+								Корзина
+							</label>
+						</fieldset>
+						<a class="button" href="form.html">Показать</a>
+					</form>
+				</div>
+				<!-- end left section -->
+
+				<!-- RIGHT SECTION -->
+				<div class="right-section">
+					<div class="sorting">
+						<b class="form-caption">Cортировать</b>
+						<ul>
+							<li><a href="#">По цене</a></li>
+							<li><a href="#">По типу</a></li>
+							<li><a href="#">По названию</a></li>
+						</ul>
+						<div class="sort-arrows">
+							<a href="#">Убывание</a>
+							<a href="#">Возростание</a>
+						</div>
+					</div>
+					<!-- end sorting -->
+
+
+					<div class="gallery">
+						<article class="gallery-item">
+							<img src="img/nerds-catalog/img-sedona.jpg" alt="sedona"  height="575" width="359">
+							<div class="hover">
+								<h3><a href="#">Sedona</a></h3>
+								<p>Информационный сайт для туристов</p>
+								<a class="btn" href="#">9 900 руб.</a>
+							</div>
+						</article>
+						<article class="gallery-item">
+							<img src="img/nerds-catalog/img-pink.jpg" alt="pink" height="575" width="359">
+							<div class="hover">
+								<h3><a href="#">Pink app</a></h3>
+								<p>Продуктовый лендинг приложения для iOS и Android</p>
+								<a class="btn" href="#">9 900 руб.</a>
+							</div>
+						</article>
+						<article class="gallery-item">
+							<img src="img/nerds-catalog/img-barbershop.jpg" alt="barbershop" height="575" width="359">
+							<div class="hover">
+								<h3><a href="#">Barbershop</a></h3>
+								<p>Сайт салона красоты. Для мужчин, да.</p>
+								<a class="btn" href="#">9 900 руб.</a>
+							</div>
+						</article>
+						<article class="gallery-item">
+							<img src="img/nerds-catalog/img-mishka.jpg" alt="mishka" height="575" width="359">
+							<div class="hover">
+								<h3><a href="#">Mishka</a></h3>
+								<p>Интернет-магазин вязанных игрушек</p>
+								<a class="btn" href="#">9 900 руб.</a>
+							</div>
+						</article>
+						<article class="gallery-item">
+							<img src="img/nerds-catalog/img-aplus.jpg" alt="a-plus" height="575" width="359">
+							<div class="hover">
+								<h3><a href="#">A plus</a></h3>
+								<p>Лендинг курсов повышения квалификации</p>
+								<a class="btn" href="#">9 900 руб.</a>
+							</div>
+						</article>
+						<article class="gallery-item">
+							<img src="img/nerds-catalog/img-kvast.jpg" alt="kvast" height="575" width="359">
+							<div class="hover">
+								<h3><a href="#">Кваст</a></h3>
+								<p>Промо-сайт производителя крафтового кваса</p>
+								<a class="btn" href="#">9 900 руб.</a>
+							</div>
+						</article>
+					</div>
+					<!-- end gallery -->
+
+				</div>
+				<!-- end right section -->
+
+				<!-- PAGINATOR -->
+				<div class="paginator">
 					<ul>
-						<li>По цене</li>
-						<li>По типу</li>
-						<li>По названию</li>
+						<li><span>1</span></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li><a class="button" href="#">Следующая</a></li>
 					</ul>
 				</div>
-				<!-- end sorting -->
+				<!-- end paginator -->
+			</div>
 
+			<!-- MAP -->
+			<div id="map" class="map">
+				<div class="container">
 
-				<div class="gallery">
-					<article class="gallery-item">
-						<img src="http://placehold.it/150x100" alt="sedona"  height="575" width="359">
-						<div class="hover">
-							<h3><a href="#">Sedona</a></h3>
-							<p>Информационный сайт для туристов</p>
-							<a class="btn" href="#">9 900 руб.</a>
-						</div>
-					</article>
-					<article class="gallery-item">
-						<img src="http://placehold.it/150x100" alt="pink" height="575" width="359">
-						<div class="hover">
-							<h3><a href="#">Pink app</a></h3>
-							<p>Продуктовый лендинг приложения для iOS и Android</p>
-							<a class="btn" href="#">9 900 руб.</a>
-						</div>
-					</article>
-					<article class="gallery-item">
-						<img src="http://placehold.it/150x100" alt="barbershop" height="575" width="359">
-						<div class="hover">
-							<h3><a href="#">Barbershop</a></h3>
-							<p>Сайт салона красоты. Для мужчин, да.</p>
-							<a class="btn" href="#">9 900 руб.</a>
-						</div>
-					</article>
-					<article class="gallery-item">
-						<img src="http://placehold.it/150x100" alt="mishka" height="575" width="359">
-						<div class="hover">
-							<h3><a href="#">Mishka</a></h3>
-							<p>Интернет-магазин вязанных игрушек</p>
-							<a class="btn" href="#">9 900 руб.</a>
-						</div>
-					</article>
-					<article class="gallery-item">
-						<img src="http://placehold.it/150x100" alt="a-plus" height="575" width="359">
-						<div class="hover">
-							<h3><a href="#">A plus</a></h3>
-							<p>Лендинг курсов повышения квалификации</p>
-							<a class="btn" href="#">9 900 руб.</a>
-						</div>
-					</article>
-					<article class="gallery-item">
-						<img src="http://placehold.it/150x100" alt="kvast" height="575" width="359">
-						<div class="hover">
-							<h3><a href="#">Кваст</a></h3>
-							<p>Промо-сайт производителя крафтового кваса</p>
-							<a class="btn" href="#">9 900 руб.</a>
-						</div>
-					</article>
+					<!-- CONTACTS -->
+					<div class="contacts">
+						<h3>nёrds design studio</h3>
+						<p>191186, Санкт-Петербург,<br>
+						ул. Б. Конюшенная, д.19/8 тел.<br> 
+						+7(812)275-75-75</p>
+						<a  class="btn" href="">Напишите нам</a>
+					</div>
+					<!-- end contacts -->
+
 				</div>
 			</div>
-			<!-- end right section -->
 		</div>
-
-		<!-- PAGINATOR -->
-		<div class="paginator">
-			<div class="container">
-				<ul>
-					<li><span>1</span></li>
-					<li><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a class="button" href="#">Следующая</a></li>
-				</ul>						
-			</div>
-		</div>
-		<!-- end paginator -->
-
-		<!-- MAP -->
-		<div id="map" class="map"></div>
-		
 	</main>
 
 
@@ -188,54 +214,39 @@
 	<footer class="main-footer">
 		<div class="container">
 
-    		<!-- CONTACTS -->
-			<div class="contacts">
-				<h3>nёrds design studio</h3>
-				<p>191186, Санкт-Петербург,<br>
-				ул. Б. Конюшенная, д.19/8 тел.<br> 
-				+7(812)275-75-75</p>
-				<a  class="btn" href="">Напишите нам</a>
-			</div>
-			<!-- end contacts -->
-
-
 			<!-- MODAL WINDOW -->
 			<div class="modal-window">
-				<div class="container">
-					<form action="#" method="post">
-						<fieldset>
-							<legend>Напишите нам</legend>
-							<label>
-								Ваше имя:
-								<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
-							</label>
-							<label>
-								Ваш e-mail:
-								<input type="email" name="e-mail" placeholder="Для отправки ответа">
-							</label>
-							<label>
-								Текст письма:
-								<textarea rows="4" name="message" placeholder="В свободной форме"></textarea>
-							</label>
-							<button class="btn">Отправить</button>
-						</fieldset>
-					</form>
-				</div>
+				<form action="#" method="post">
+					<fieldset>
+						<legend>Напишите нам</legend>
+						<label>
+							Ваше имя:
+							<input type="text" name="name" placeholder="Представьтесь, пожалуйста">
+						</label>
+						<label>
+							Ваш e-mail:
+							<input type="email" name="e-mail" placeholder="Для отправки ответа">
+						</label>
+						<label>
+							Текст письма:
+							<textarea rows="4" name="message" placeholder="В свободной форме"></textarea>
+						</label>
+						<button class="btn">Отправить</button>
+					</fieldset>
+				</form>
 			</div>
 			<!-- end modal window -->
 		
 			<!-- SOCIAL -->
 			<div class="social">
-				<div class="container">
-					<div class="social-icons">
-						<a href="#">Вконтакте</a>
-						<a href="#">Facebook</a>
-						<a href="#">Instagram</a>
-					</div>
-					<div class="social-text">
-						<b>Давайте дружить, это выгодно!</b>
-						<p>Скидка 10% для друзей из социальных сетей.</p>
-					</div>
+				<div class="social-icons">
+					<a href="#">Вконтакте</a>
+					<a href="#">Facebook</a>
+					<a href="#">Instagram</a>
+				</div>
+				<div class="social-text">
+					<b>Давайте дружить, это выгодно!</b>
+					<p>Скидка 10% для друзей из социальных сетей.</p>
 				</div>
 			</div>
 			<!-- end social -->
